tests/sksl/errors/NoES3ModifierInUserCode.glsl
### Compilation failed:

error: 1: '$es3' is not permitted here
1 error
